--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -1,5 +1,4 @@
-{% load static %}  <!-- This line is crucial -->
-
+{% load static %} 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +7,15 @@
     <title>Video Platform</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
     <!-- Custom CSS -->
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">  <!-- Usage of static tag -->
+    {% load static %}
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
 </div>
-<script src="{% static 'js/video-time-links.js' %}"></script>
 </body>
 </html>
