--- a/mysite/myapp/templates/myapp/upload_video.html
+++ b/mysite/myapp/templates/myapp/upload_video.html
@@ -1,4 +1,4 @@
-{% extends 'myapp/base.html' %}
+{% comment %} {% extends 'myapp/base.html' %}
 
 {% block content %}
 <h2>Upload Video</h2>
@@ -7,4 +7,4 @@
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Upload</button>
 </form>
-{% endblock %}
+{% endblock %} {% endcomment %}
