--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -9,8 +9,31 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
     <!-- Custom CSS -->
-    {% load static %}
+    {% comment %} {% load static %} {% endcomment %}
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <style>
+        .video-flex-container {
+            display: flex;
+            justify-content: center;
+            align-items: start;
+            margin-bottom: 20px;
+        }
+        .video-section {
+            flex-grow: 1;
+            margin-right: 20px;
+        }
+        .controls-section {
+            flex-grow: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: start;
+        }
+        .video-js {
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
