--- a/mysite/myapp/templates/myapp/base.html
+++ b/mysite/myapp/templates/myapp/base.html
@@ -10,7 +10,7 @@
     <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
     <!-- Custom CSS -->
     {% comment %} {% load static %} {% endcomment %}
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    {% comment %} <link href="{% static 'css/styles.css' %}" rel="stylesheet"> {% endcomment %}
     <style>
         .video-flex-container {
             display: flex;
